local/docker-registry/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry
  namespace: docker-registry
  annotations:
    #nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "kong"
    #ingress.kubernetes.io/service-upstream: "true"
    #kubernetes.io/tls-acme: "false"
    #nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    #nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    #nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    #nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #  more_set_headers "Host: registory.localhost:8080";
spec:
  rules:
  - host: registry.k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-registry
          servicePort: 5000
